Fix locators and assertions to match React app structure

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,5 +1,5 @@
 # Application Configuration
-baseUrl=http://localhost:3000
+baseUrl=http://localhost:3001
 browser=chrome
 headless=false
 
@@ -13,5 +13,5 @@ explicitWait=20
 pageLoadTimeout=30
 
 # Test Data
-testUserEmail=test@foodorder.com
-testUserPassword=Test@123
+testUserEmail=ram@gmail.com 
+testUserPassword=123
